# kuliahluthfi

./: .zshrc  LICENSE  README.md
Semester 1 (Astaga, Lupa Nametag!)/: Rekap Nilai Upi Semester 1.gsheet  Rekap Nilai Upi Semester 1.xlsx
Semester 1 (Astaga, Lupa Nametag!)/04 Tugas-Tugas Momentos/DDP 1/: DDP 1 - LAB 03 - ALDEN LUTHFI - 2206028932.py  DDP 1 - LAB 07 - ALDEN LUTHFI - 2206028932.py  DDP 1 - TP 04 - ALDEN LUTHFI - 2206028932.py
Semester 1 (Astaga, Lupa Nametag!)/04 Tugas-Tugas Momentos/PSD/: PSD - LAB 03 - ALDEN LUTHFI - 2206028932.circ  PSD - LAB 06 - ALDEN LUTHFI - 2206028932.circ  PSD - LAB 08 - ALDEN LUTHFI - 2206028932.circ
Semester 1 (Astaga, Lupa Nametag!)/SLD - Slide Cha-Cha Real Smooth/KALKULUS 1/: KALKULUS 1 - TOPIK 3 TAMBAHAN - TURUNAN.pptx  KALKULUS 1 - TOPIK 8 TAMBAHAN - APLIKASI INTEGRAL.pptx
Semester 1, Astaga, Lupa Nametag!/: Rekap Nilai Upi Semester 1.xlsx
Semester 2 (Sipaling Sibuk Tuh, Masokis!)/: Rekap Nilai Upi Semester 2.xlsx
Semester 2 (Stop, Sipaling Sibuk Tuh!)/: Rekap Nilai Upi Semester 2.gsheet  Rekap Nilai Upi Semester 2.xlsx
Semester 2, Stop, Sipaling Sibuk Tuh!/: Rekap Nilai Upi Semester 2.xlsx
Semester 4 (War is Over)/Tugas/ADPRO/ADPRO - REPO MODUL 8 - ALDEN LUTHFI - 2206028392/tutorial8-publisher/: Cargo.toml
Semester 4 (War is Over)/Tugas/ADPRO/ADPRO - REPO MODUL 8 - ALDEN LUTHFI - 2206028392/tutorial8-publisher/src/: main.rs
Semester 4 (War is Over)/Tugas/ADPRO/ADPRO - REPO MODUL 9 - ALDEN LUTHFI - 2206028392/adpro-grpctutorial9/: Cargo.toml  build.rs
meta/: iconmap.json
(+936 files in other folders)
