[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust- lang.org/cargo/reference/manifest.html

[dependencies]
crosstown_bus = "0.5.0"
futures = "0.3"
borsh = "0.9.3"
borsh-derive = "0.9.1"
tokio = {version="1.21.2", features=["full"]}